tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier7ZPM-AAAAAAAAAAAAAAAAAAAAHg==__Onceagain-AAAAAAAAAAAAAAAAAAALig==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2954,
  "prerequisites": [
    2951
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The miscibility of P-507 and naquadria is still very perfect like naquadah. Most naquadria can be concentrated again.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Once again",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2951
  ],
  "rewards": [],
  "tasks": []
}
