tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier7ZPM-AAAAAAAAAAAAAAAAAAAAHg==__PPICWafers-AAAAAAAAAAAAAAAAAAAKRw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2631,
  "prerequisites": [
    2632
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You'll need Piko Power ICs to make Solars, UHV -> UEV transformers, and UV Hatches and Dynamos.\n\n[note]You'll need a UV Cutting Machine, or an OC'd multi to cut the wafers.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "PPIC Wafers",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2632
  ],
  "rewards": [],
  "tasks": []
}
