tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier7ZPM-AAAAAAAAAAAAAAAAAAAAHg==__PaintbyNumbers-AAAAAAAAAAAAAAAAAAAKdg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2678,
  "prerequisites": [
    2005
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you want to color all those fancy cables and such, you'll want to use the humble Paintbrush. To uncolor them, use a bucket of water.\n\nAlternatively, you can also use the IC2 Painter, GT Spray Can, or the AE2 Color Applicator.\n\n[note]The buildcraft paintbrush and GT spray cans can now color many cables or pipes in a row with just a single click![/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Paint-by-Numbers",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2005
  ],
  "rewards": [],
  "tasks": []
}
