tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier7ZPM-AAAAAAAAAAAAAAAAAAAAHg==__PrismarinePrecip-fc7Q6J-BThCf_NbvM0ki2Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 11493553555513090777,
  "prerequisites": [
    8338768487073405587
  ],
  "properties": {
    "auto_claim": false,
    "desc": "After creating the §2Prismarine-Rich Nitrobenzene Solution§r, you'll need to process it using a §5§lChemical Plant§r with §2Strontium Hydroxide§r. Once processed, you can successfully obtain your first §3Prismarine Precipitate§r.\n\n[warn]This line produces excess Strontium, so no need to worry about its continuous injection.[/warn]\n\n[note]If you have not gotten Strontium yet, you can obtain it from Strontium Oxide based on Rare Earth 3 or from Spessartine Froth.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Prismarine Precipitate",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    8338768487073405587
  ],
  "rewards": [],
  "tasks": []
}
